
 * "Privileged" status for user invalidates "impersonate" operation of WorkflowAPI

 * Tab details errors whith simple class ForeignKey as source

 * ForeignKey fields store URL errors

 * Widget buttons duplication while using direct routes on process instance with Firefox

 * Error while saving a search filter without selecting a default group





CMDBuild 2.4.1 (released 2016/06/16)


NEW FEATURES

 * Single authentication system used by all web service

 * Added Czech translation

 * Keep sync checkbox checked by default on administration email template form

 * Locks related to a user session must be removed when the session is closed or expired

 * Single execution of a task without scheduling

 * Impersonate another user and/or group using workflow API

 * User and current group ids available within functions used for dashboards

 * Workflow metadata implementation

 * Row and column privileges save policies review

 * Generic task for sending reports throught e-mail


FIXES

 * Tab Email: widget configuration's presence also if widget doens't exists

 * REST logout error with header autenticator

 * Menu available items wrong italian translations

 * PreselectIfUnique metadata sent on attribute save action

 * Management report pagination errors

 * Widget Grid: missing configuration model name error

 * Error while editing icon from administration class edit form

 * Login page errors

 * LDAP connection timeout freezes UI for long time

 * Widget CustomForm: reset to default behaviour error with functions

 * Reference fields errors with domain's attributes

 * Lookup fields no mandatory label flag in display panels

 * Widget CustomForm: server persistence manage errors

 * HTML editor rendering problems while used as cell editor

 * The print of built-in reports generates an error

 * The "between" operator of the advanced filter does not includes ends

 * Lookup fields marked as invalid first displaied time in edit mode
